# -DeployAndServe

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup_environment.bat
deploy2serve/: annotation.py
deploy2serve/deployment/: deploy.py  deploy_template.json
deploy2serve/deployment/core/executors/: __init__.py  base.py  factory.py
deploy2serve/deployment/core/exporters/: __init__.py  base.py  factory.py
deploy2serve/deployment/docker/: deploy.Dockerfile  deploy.ps1  docker-compose.yaml
deploy2serve/deployment/models/: common.py  dataset.py  export.py
deploy2serve/deployment/models/backends/: onnx_opts.py  openvino_opts.py  tensorrt_opts.py
deploy2serve/deployment/models/export/: __init__.py  common.py  export_opts.py  onnx_opts.py  openvino_opts.py  tensorrt_opts.py  torchscript_opts.py
deploy2serve/deployment/overrides/sapiens/: executor.py  export.py  requirements.txt
deploy2serve/deployment/overrides/yolo/: executor.py  export.py  model.py
deploy2serve/deployment/projects/sapiens/: executor.py  export.py  requirements.txt
deploy2serve/deployment/projects/yolo/: batcher.py  export.py
deploy2serve/deployment/utils/: progress_utils.py  tensorrt_progress.py  uncompressor.py  wrappers.py
deploy2serve/torchserve/: README.md  check_labels.py  serve.ps1  service.py
deploy2serve/torchserve/custom/yolo/: config.properties  serve.ps1
deploy2serve/torchserve/docker/: docker-compose.yaml  prometheus.yml
deploy2serve/torchserve/docker/grafana/: grafana-dash.json
deploy2serve/torchserve/overrides/yolo/: config.properties  handler.py  serve.ps1
deploy2serve/triton/: README.md  ensemble_client.py  serve.ps1
deploy2serve/triton/core/: configs.py
deploy2serve/triton/docker/: docker-compose.yaml  prometheus.yml
deploy2serve/triton/overrides/: annotation.py
deploy2serve/triton/resources/: .gitkeep
deploy2serve/utils/: containers.py  logger.py  runner.py
deployment/: deploy.py
deployment/configs/: export_template.json  export_yolo.json  export_yolo.yml
deployment/core/executors/: __init__.py  base.py  factory.py
deployment/core/exporters/: __init__.py  base.py  factory.py
deployment/custom/yolo/: executor.py  export.py  model.py  wrapper.py
deployment/custom_export/: yolo.py
deployment/docker/: docker-compose.yaml
deployment/models/export/: __init__.py  common.py  export_opts.py  onnx_opts.py  openvino_opts.py  tensorrt_opts.py
docker/: deploy.ps1  docker-compose.yaml
resources/: .gitkeep
torchserve/: check_labels.py  client.py  serve.ps1
torchserve/custom/yolo/: config.properties  handler.py  serve.ps1
torchserve/docker/: prometheus.yml
torchserve/models/: .gitkeep
triton/: README.md  base.py  base_service.py  client.py  configs.py  ensemble_client.py  main.py  regular_client.py  serve.ps1  service.py  service_pattern.json  service_pattern.yaml
triton/custom/: service_pattern.json
triton/custom/yolo/: config.json  yolo.py  yolo.yaml
triton/docker/: docker-compose.yaml  prometheus.yml
triton/models/yolo_trt/: config.pbtxt
utils/: containers.py  logger.py  runner.py
weights/: .gitkeep
(+88 files in other folders)
