[project]
name = "deploy2serve"
dynamic = ["version"]
requires-python = ">=3.10"

[tool.poetry]
version = "0.1.0"
readme = ["README.md"]
packages = [
    { include = "deploy2serve/deployment", from = "." },
    { include = "deploy2serve/torchserve", from = "." },
    { include = "deploy2serve/triton", from = "." },
    { include = "deploy2serve/utils", from = "." },
]

[tool.poetry.dependencies]
numpy = "1.23.5"
ultralytics = "^8.3.152"
tensorrt = "10.10.0.31"
onnx = "^1.18.0"
torch = {version = "2.3.0", source="pytorch"}
torchvision = { version = "0.18.0", source = "pytorch" }
torchaudio = { version = "2.3.0", source = "pytorch" }
onnxruntime-gpu = ">=1.18.1"
pydantic = {extras = ["all"], version = "^2.11.5"}
onnxslim = "^0.1.56"
fastapi = {extras = ["all"], version =  ">=0.115.12"}
mmcv = {version = ">=2.2.0", source="mmcv_prebuilt"}
opencv-python = ">=4.8.1.78"
opencv-contrib-python = ">=4.8.1.78"
openvino = "2025.2.0"
colorlog = "6.9.0"
zarr = "2.18.3"
h5py = "3.14.0"
roboflow = "1.2.3"
gdown = "5.2.0"
pycocotools = "2.0.10"

[tool.poetry.group.formatting.dependencies]
black = ">=25.1.0"
flake8 = ">=7.2.0"
isort = ">=6.0.1"
pre-commit = "^4.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"

[tool.poetry.group.torchserve.dependencies]
torchserve = "0.12.0"
torch-model-archiver = "0.12.0"
torch-workflow-archiver = "0.2.15"
pynvml = "11.5.0"
imutils = "0.5.4"

[tool.poetry.group.triton.dependencies]
tritonclient = {extras = ["all"], version =  ">=2.58.0"}

[tool.poetry.group.bentoml.dependencies]
bentoml = "^1.4.15"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[[tool.poetry.source]]
name = "mmcv_prebuilt"
url = "https://download.openmmlab.com/mmcv/dist/cu121/torch2.3/index.html"
priority = "explicit"
